code/style.css
:root {
  --primary-color: #ffbe98;
  --secondary-color: #85677B;
  --details-color-1: #869D7A;
  --details-color-2: #91785D;
  --contrast-color-light: #e5e5e5;
  --base-text-color: #160C28;
  --light-text-color: #e5e5e5;
  --font-size: 12px;
  --standard-box-shadow: 2px 2px 10px 1px var(--secondary-color);
  --standard-text-shadow: 5px 5px var(--base-text-color);
}

* {
  box-sizing: border-box;
  max-width: 100vw;
}

body {
  background: linear-gradient(145deg, var(--primary-color) 15%, var(--secondary-color));
  background-color: var(--primary-color);
  /* Fallback */
  color: var(--base-text-color);
  background-repeat: no-repeat;
  background-attachment: fixed;
  overflow-x: hidden;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', Arial, Arial, Helvetica, sans-serif;
  font-size: var(--font-size);
  font-weight: 400;
}

main {
  position: relative;
  max-width: 1400px;
  margin: 1rem auto !important;
  padding: 0 1%;
  grid-area: main;
}

aside {
  grid-area: aside;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: flex-start;
}

img {
  max-width: 100%;
  display: block;
}

video {
  max-width: 100%;
  margin: .5rem;
}

button {
  border-radius: 5%;
  background-color: var(--details-color-1);
  padding: 0.5em 1em;
  text-align: center;
  text-transform: uppercase;
  text-size-adjust: 0.6em;
  border: none;
  margin: 0;
}

ul {
  padding: 0;
}

li::marker {
  color: var(--secondary-color);
}

/* Typography */
h1,
h2,
h3,
h4,
h5,
.h2 {
  line-height: 1;
  font-family: 'Newsreader', Georgia, 'Times New Roman', Times, serif;
}

h1 {
  font-size: 2rem;
  display: inline;
  color: black;
  font-weight: bolder;
}

h1::before {
  content: "<i class=" fa-solid fa-shield-cat"></i>";
}

h2,
.h2 {
  font-size: 2.5rem;
}

h3 {
  font-size: 1.5rem;
}

a {
  text-decoration: none;
  color: var(--text-color);
  cursor: pointer;
  transition: all ease-in-out .8s;
}

a:hover {
  text-decoration: underline;
  font-weight: 600;
}

p {
  font-weight: 300;
}

hr {
  border-bottom: 0.5px solid var(--details-color-2);
}

/* Layout */

.wrapper {
  display: grid;
  grid-template-areas:
    "header"
    "main"
    "footer";
}

.grid-container {
  margin: 0;
  display: grid;
  gap: 10px;
  grid-template-areas:
    "big-news"
    "aside"
    "other-news";
}

.flex-container {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: stretch;
  justify-content: center;
}

.flex-item {
  overflow-x: hidden;
  padding: 0 2%;
}

/* Header, nav & footer */
header {
  grid-area: header;
}

footer {
  background-color: var(--secondary-color);
  color: var(--contrast-color-light);
  grid-area: footer;
  margin: 0;
  padding: 2%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: center;
  align-items: stretch;
  justify-content: flex-start;
  gap: 2%;
}

footer .logo {
  height: 4rem;
  padding: 5%;
}

footer li {
  list-style: none;
}

.footer-links>div {
  margin: 1.875rem;
}

.footer-text {
  display: none;
}

.logo {
  height: 2.5rem;
  padding: 0;
}

.icon {
  margin-left: auto;
}

.navbar {
  z-index: 99;
  position: sticky;
  top: 0;
  padding: 0.5rem 1rem;
  width: 100vw;
  background-color: var(--secondary-color);
  height: 100px;
  padding: 10px;
  align-items: center;
  justify-content: space-between;
}

.navbar ul {
  list-style: none;
  width: 100%;
  align-items: baseline;
  justify-content: center;
}

.nav-brand {
  flex-grow: 0;
  width: 280px;
  padding-top: .5rem;
}

.nav-item {
  padding: 0.875rem 1rem;
  color: var(--light-text-color);
  margin: 0;
  font-size: 0.875rem;
}

.nav-menu-main .nav-item {
  text-transform: uppercase;

}

.signup {
  color: var(--primary-color);
  font-weight: 600;
}

.nav-menu-main {
  flex-grow: 1;
}

.menu-toggle {
  flex-grow: 0;
  margin: 0.5rem 1rem;
}

.menu-drawer {
  background-color: var(--secondary-color);
  box-shadow: var(--standard-box-shadow);
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 90vw;
  z-index: 500;
  display: none;
  animation: slidein .3s linear;
}

.show {
  display: flex;
}

.nav-desktop {
  display: none;
}

.scroll-top {
  position: fixed;
  bottom: 10px;
  right: 10px;
  transition: color ease-in-out .2s;
}

.scroll-top:hover {
  color: var(--primary-color);
}

/* News */
.news-card {
  background-color: var(--contrast-color-light);
  padding: 1.5rem;
  margin-bottom: 10px;
  border-radius: 32px;
  box-shadow: var(--standard-box-shadow);
}

.big-news {
  grid-area: big-news;
  text-align: center;

}

.other-news {
  grid-area: other-news;
  gap: 0.5rem;
  align-items: baseline;
}

.related-news {
  text-align: left;
  font-size: 0.875rem;
  font-weight: 200;
}

.extra {
  line-height: 1;
  font-size: 5rem;
  font-weight: 800;
  text-transform: uppercase;
  text-shadow: 5px 5px var(--base-text-color);
  color: var(--secondary-color);
  background-color: .2, var(--details-color-1);
  top: 0em;
  z-index: 10;
  position: relative;
  text-align: center;
  margin: 0;
  animation: scroll-text 15s linear infinite;
  white-space: nowrap;
  max-width: 80vw;
}

.extra+* {
  margin-top: -5em;
}

.news-category {
  text-transform: uppercase;
  display: inline;
  font-weight: 600;
  color: var(--secondary-color);
  font-size: 0.875rem;
}

.aside-heading::after {
  background-color: var(--secondary-color);
  width: 30%;
  height: 0.2rem;
  content: " ";
  display: block;
}

.aside-news {
  border-bottom: 1px solid var(--secondary-color);
  padding-bottom: 0.5rem;
  margin: 1rem;
  font-weight: 300;
}

/* for tablets */
@media all and (min-width: 668px) {

  /* Typhography */
  h2 {
    font-size: 3rem;
  }

  /* Layout */
  .grid-container {
    grid-template-columns: 66% 33%;
    grid-template-areas:
      "big-news big-news"
      "other-news aside";
  }

  .flex-item {
    max-width: 800px;
  }

  /* Header, nav & footer */

  .navbar {
    height: auto;
  }

  .nav-brand {
    order: 1;
  }

  .nav-menu-main {
    order: 3;
  }

  .nav-menu-sub {
    order: 2;
  }

  .menu-toggle {
    order: 2;
  }

  /* News */

  .big-news .flex-container {
    align-items: center;
    justify-items: center;
  }

  .other-news {
    align-items: stretch;
  }

  .news-item {
    flex-grow: 1;
    max-width: 800px;
  }
}

/* for screens larger than tablet */
@media (min-width: 1025px) {

  /* Layout */
  .grid-container {
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    grid-template-areas:
      "big-news big-news big-news big-news"
      "other-news other-news other-news aside";
  }

  /* Header, nav & footer */
  .menu-toggle {
    display: none;
  }

  .navbar {
    align-items: baseline;
  }

  .nav-desktop {
    display: block;
  }

  /* News */
  .big-news .flex-item {
    width: 50%;
  }

  .other-news {
    align-items: stretch;
  }

  .news-item {
    width: 32%;
  }
}

/* for desktops */
@media (min-width: 1150px) {
  .nav-menu-main {
    order: 2;
  }

  .nav-menu-sub {
    order: 3;
  }
}

/* Animations */

/* Scoll effect for .extra */
@keyframes scroll-text {
  from {
    -moz-transform: translateX(100%);
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -moz-transform: translateX(-100%);
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

/* Mobile menu activation */
@keyframes slidein {
  from {
    left: -100%;
  }

  to {
    left: 0;
  }
}

